--- a/TripleAProject/TripleAProject.Client/index.html
+++ b/TripleAProject/TripleAProject.Client/index.html
@@ -14,6 +14,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asul&display=swap" rel="stylesheet">
 
+    <!-- Main Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+
+
+
+
 
     <title>Tripple A</title>
   </head>
