--- a/TripleAProject/TripleAProject.Webapi/wwwroot/index.html
+++ b/TripleAProject/TripleAProject.Webapi/wwwroot/index.html
@@ -24,7 +24,7 @@
 
 
 
-    <title>Tripple A</title>
+    <title>Triple A</title>
     <script type="module" crossorigin src="/assets/index.a1250765.js"></script>
     <link rel="stylesheet" href="/assets/index.538d5361.css">
   </head>
